recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:7: error: Unit does not take parameters
else spiral(steps-1,90,length+increment,increment){
                                                  ^